--- a/App/React/styles/dashboard/componentes/proyectos.css
+++ b/App/React/styles/dashboard/componentes/proyectos.css
@@ -169,7 +169,6 @@
 
 .botonPeligro:hover {
     color: var(--dashboard-estadoAlta);
-    opacity: 0.8;
 }
 
 .vistaProyectoProgreso {
